[gd_scene load_steps=18 format=3 uid="uid://bn1xuhyfpftiy"]

[ext_resource type="Script" uid="uid://de2f0b1t0tta4" path="res://main.gd" id="1_tefeu"]
[ext_resource type="Texture2D" uid="uid://cu1cbkgncd34e" path="res://assets/장판.png" id="2_o6xl0"]
[ext_resource type="Texture2D" uid="uid://hdynfhrpjraq" path="res://assets/복숭아2.png" id="3_tipki"]
[ext_resource type="Script" uid="uid://doypb3ma373hw" path="res://character_controller.gd" id="4_85g3d"]
[ext_resource type="Texture2D" uid="uid://bpr1ep7qx1wp7" path="res://assets/Man-side.png" id="5_choun"]
[ext_resource type="Texture2D" uid="uid://bhbwcjkqn0gtq" path="res://assets/전구.png" id="6_ya4ey"]
[ext_resource type="Script" uid="uid://c87whe0whkbvl" path="res://area_with_visual.gd" id="7_area_script"]
[ext_resource type="Script" uid="uid://ctaq0cn8trabb" path="res://line_with_collision.gd" id="8_line_collision"]

[sub_resource type="GDScript" id="GDScript_y5ufn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7va6"]
size = Vector2(30, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_2d31a"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgxe7"]
size = Vector2(13, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anchor"]
size = Vector2(20, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_bulb"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mycd"]
size = Vector2(459.5, 242)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_272bh"]
polygon = PackedVector2Array(176.99998, 163.99998, 327, 160.99998, 326, 316, 177.99998, 312)

[sub_resource type="Curve" id="Curve_272bh"]
_data = [Vector2(0.28915662, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.04094255), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Main" type="Node2D"]
script = ExtResource("1_tefeu")

[node name="Platforms" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="Platforms"]
unique_name_in_owner = true
position = Vector2(510.9999, 550.99994)
scale = Vector2(5, 5)
script = SubResource("GDScript_y5ufn")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Platforms/AnimatableBody2D"]
texture = ExtResource("2_o6xl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/AnimatableBody2D"]
shape = SubResource("RectangleShape2D_w7va6")

[node name="StaticBody2D" type="StaticBody2D" parent="Platforms"]
position = Vector2(357.99997, 551)
scale = Vector2(5, 5)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Platforms/StaticBody2D"]
texture = ExtResource("2_o6xl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/StaticBody2D"]
shape = SubResource("RectangleShape2D_w7va6")

[node name="StaticBody2D3" type="StaticBody2D" parent="Platforms"]
position = Vector2(664.99994, 551)
scale = Vector2(5, 5)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Platforms/StaticBody2D3"]
texture = ExtResource("2_o6xl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/StaticBody2D3"]
shape = SubResource("RectangleShape2D_w7va6")

[node name="StaticBody2D4" type="StaticBody2D" parent="Platforms"]
position = Vector2(819.99994, 551)
scale = Vector2(5, 5)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Platforms/StaticBody2D4"]
texture = ExtResource("2_o6xl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/StaticBody2D4"]
shape = SubResource("RectangleShape2D_w7va6")

[node name="StaticBody2D2" type="StaticBody2D" parent="Platforms"]
position = Vector2(208.00002, 551)
scale = Vector2(5, 5)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Platforms/StaticBody2D2"]
texture = ExtResource("2_o6xl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/StaticBody2D2"]
shape = SubResource("RectangleShape2D_w7va6")

[node name="StaticBody2D5" type="StaticBody2D" parent="Platforms"]
position = Vector2(969, 551)
scale = Vector2(5, 5)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Platforms/StaticBody2D5"]
texture = ExtResource("2_o6xl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/StaticBody2D5"]
shape = SubResource("RectangleShape2D_w7va6")

[node name="Fruits" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="RigidBody2D" type="RigidBody2D" parent="Fruits"]
position = Vector2(536, 186)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fruits/RigidBody2D"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_2d31a")

[node name="Sprite2D" type="Sprite2D" parent="Fruits/RigidBody2D/CollisionShape2D"]
texture = ExtResource("3_tipki")

[node name="RigidBody2D2" type="RigidBody2D" parent="Fruits"]
position = Vector2(538, 93)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fruits/RigidBody2D2"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_2d31a")

[node name="Sprite2D" type="Sprite2D" parent="Fruits/RigidBody2D2/CollisionShape2D"]
texture = ExtResource("3_tipki")

[node name="RigidBody2D3" type="RigidBody2D" parent="Fruits"]
position = Vector2(524, 40)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fruits/RigidBody2D3"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_2d31a")

[node name="Sprite2D" type="Sprite2D" parent="Fruits/RigidBody2D3/CollisionShape2D"]
texture = ExtResource("3_tipki")

[node name="RigidBody2D4" type="RigidBody2D" parent="Fruits"]
position = Vector2(474, 173)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fruits/RigidBody2D4"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_2d31a")

[node name="Sprite2D" type="Sprite2D" parent="Fruits/RigidBody2D4/CollisionShape2D"]
texture = ExtResource("3_tipki")

[node name="RigidBody2D5" type="RigidBody2D" parent="Fruits"]
position = Vector2(485, 81)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fruits/RigidBody2D5"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_2d31a")

[node name="Sprite2D" type="Sprite2D" parent="Fruits/RigidBody2D5/CollisionShape2D"]
texture = ExtResource("3_tipki")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(356.99997, 389)
script = ExtResource("4_85g3d")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(6.5, -4)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_lgxe7")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/CollisionShape2D"]
texture = ExtResource("5_choun")
flip_h = true

[node name="ElectricBulbs" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="PinJointBulb" type="PinJoint2D" parent="ElectricBulbs"]
unique_name_in_owner = true
position = Vector2(604, 74)
node_a = NodePath("AnchorBody")
node_b = NodePath("RigidBody2D")
metadata/_edit_group_ = true

[node name="AnchorBody" type="StaticBody2D" parent="ElectricBulbs/PinJointBulb"]
position = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElectricBulbs/PinJointBulb/AnchorBody"]
shape = SubResource("RectangleShape2D_anchor")

[node name="RigidBody2D" type="RigidBody2D" parent="ElectricBulbs/PinJointBulb"]
position = Vector2(0, 12)
mass = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElectricBulbs/PinJointBulb/RigidBody2D"]
shape = SubResource("CircleShape2D_bulb")

[node name="Sprite2D" type="Sprite2D" parent="ElectricBulbs/PinJointBulb/RigidBody2D"]
modulate = Color(1, 1, 0.5, 1)
scale = Vector2(2, 2)
texture = ExtResource("6_ya4ey")

[node name="BouncySpringBulb" type="DampedSpringJoint2D" parent="ElectricBulbs"]
unique_name_in_owner = true
position = Vector2(1065, 39)
node_a = NodePath("AnchorBody")
node_b = NodePath("RigidBody2D")
rest_length = 60.0
stiffness = 100.0
damping = 0.5
metadata/_edit_group_ = true

[node name="AnchorBody" type="StaticBody2D" parent="ElectricBulbs/BouncySpringBulb"]
position = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElectricBulbs/BouncySpringBulb/AnchorBody"]
shape = SubResource("RectangleShape2D_anchor")

[node name="RigidBody2D" type="RigidBody2D" parent="ElectricBulbs/BouncySpringBulb"]
position = Vector2(0, 70)
gravity_scale = 0.7
linear_damp = 0.1
angular_damp = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElectricBulbs/BouncySpringBulb/RigidBody2D"]
shape = SubResource("CircleShape2D_bulb")

[node name="Sprite2D" type="Sprite2D" parent="ElectricBulbs/BouncySpringBulb/RigidBody2D"]
modulate = Color(1, 0.7, 0.3, 1)
scale = Vector2(2, 2)
texture = ExtResource("6_ya4ey")

[node name="GrooveJointBulb" type="GrooveJoint2D" parent="ElectricBulbs"]
unique_name_in_owner = true
position = Vector2(918, 49)
node_a = NodePath("AnchorBody")
node_b = NodePath("RigidBody2D")
length = 120.0
initial_offset = 50.0
metadata/_edit_group_ = true

[node name="AnchorBody" type="StaticBody2D" parent="ElectricBulbs/GrooveJointBulb"]
position = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElectricBulbs/GrooveJointBulb/AnchorBody"]
shape = SubResource("RectangleShape2D_anchor")

[node name="RigidBody2D" type="RigidBody2D" parent="ElectricBulbs/GrooveJointBulb"]
position = Vector2(0, 50)
gravity_scale = 0.3
linear_damp = 0.2
angular_damp = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElectricBulbs/GrooveJointBulb/RigidBody2D"]
shape = SubResource("CircleShape2D_bulb")

[node name="Sprite2D" type="Sprite2D" parent="ElectricBulbs/GrooveJointBulb/RigidBody2D"]
modulate = Color(0.5, 1, 0.8, 1)
scale = Vector2(2, 2)
texture = ExtResource("6_ya4ey")

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(820, 355)
script = ExtResource("7_area_script")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3.75, -1)
shape = SubResource("RectangleShape2D_7mycd")

[node name="StatusLabel" type="Label" parent="Area2D/CollisionShape2D"]
unique_name_in_owner = true
offset_left = -109.0
offset_top = -147.0
offset_right = 141.0
offset_bottom = -97.0
text = "범위 내에 캐릭터 유무"

[node name="ColorRect" type="ColorRect" parent="Area2D/CollisionShape2D"]
offset_left = -229.75
offset_top = -121.0
offset_right = 229.75
offset_bottom = 121.0
size_flags_horizontal = 3
color = Color(1, 1, 0, 0.3)
metadata/_edit_lock_ = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
unique_name_in_owner = true
color = Color(0.38170326, 0.38170323, 0.38170323, 1)

[node name="Lights" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="BouncySpringBulb" type="DampedSpringJoint2D" parent="Lights"]
position = Vector2(765, 9)
node_a = NodePath("AnchorBody")
node_b = NodePath("RigidBody2D")
rest_length = 60.0
stiffness = 100.0
damping = 0.5
metadata/_edit_group_ = true

[node name="AnchorBody" type="StaticBody2D" parent="Lights/BouncySpringBulb"]
position = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lights/BouncySpringBulb/AnchorBody"]
shape = SubResource("RectangleShape2D_anchor")

[node name="RigidBody2D" type="RigidBody2D" parent="Lights/BouncySpringBulb"]
position = Vector2(0, 70)
gravity_scale = 0.7
linear_damp = 0.1
angular_damp = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lights/BouncySpringBulb/RigidBody2D"]
shape = SubResource("CircleShape2D_bulb")

[node name="Sprite2D" type="Sprite2D" parent="Lights/BouncySpringBulb/RigidBody2D"]
modulate = Color(1, 0.7, 0.3, 1)
scale = Vector2(2, 2)
texture = ExtResource("6_ya4ey")

[node name="PointLight2D" type="PointLight2D" parent="Lights/BouncySpringBulb/RigidBody2D"]
position = Vector2(-1, 1)
color = Color(1, 1, 0.7, 1)
energy = 1.5
shadow_enabled = true
texture = ExtResource("6_ya4ey")
texture_scale = 50.0

[node name="AnimatableBodyWithLight" type="AnimatableBody2D" parent="Lights"]
unique_name_in_owner = true
position = Vector2(129.00002, 110)
scale = Vector2(5, 5)
script = SubResource("GDScript_y5ufn")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Lights/AnimatableBodyWithLight"]
texture = ExtResource("2_o6xl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lights/AnimatableBodyWithLight"]
shape = SubResource("RectangleShape2D_w7va6")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Lights/AnimatableBodyWithLight"]
position = Vector2(-50.800003, -47.999996)
scale = Vector2(0.19999997, 0.19999997)
occluder = SubResource("OccluderPolygon2D_272bh")
metadata/_edit_group_ = true

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="Lights/AnimatableBodyWithLight"]
position = Vector2(79.99999, -80.6)
scale = Vector2(0.043368258, 0.27616346)
color = Color(0.26475334, 0.26475334, 0.26475334, 1)
shadow_enabled = true
metadata/_edit_group_ = true

[node name="Lines" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="Lines"]
position = Vector2(495, 33)
scale = Vector2(1, 0.9291045)
points = PackedVector2Array(-14, 8, 130.99997, 113.01204, -113, 128.08032, 184.99997, 321.81525)
width_curve = SubResource("Curve_272bh")
joint_mode = 1
begin_cap_mode = 1
script = ExtResource("8_line_collision")
